<resources>
    <string name="app_name">Our Menu</string>
    <string name="home_text">ホーム</string>
    <string name="curry_text">カレー</string>
    <string name="greencurry_text">グリーンカレー</string>
    <string name="beefcurry_text">牛すじカレー</string>
    <string name="noodle_curry">麺類</string>
    <string name="soba1_text">ぶっかけそば</string>
    <string name="soba2_text">おろしそば</string>
    <string name="stew_text">鍋もの</string>
    <string name="oden_text">おでん</string>
    <string name="osyarenabe_text">おしゃれな鍋</string>
    <string name="etc_text">その他</string>
    <string name="beefbowl_text">牛丼</string>
    <string name="peperpncino_text">ペペロンチーノ</string>
    <string name="hayashi_text">ハヤシライス</string>
    <string name="mail_text">メールする</string>
    <string name="sms_text">SMSする</string>
</resources>
