<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/curry"
        android:title="@string/curry_text" >
        <menu >
            <item
                android:id="@+id/beefcurry"
                android:title="@string/beefcurry_text" />
            <item
                android:id="@+id/greencurry"
                android:title="@string/greencurry_text" />
        </menu>
    </item>
    <item
        android:id="@+id/noodle"
        android:title="@string/noodle_curry" >
        <menu >
            <item
                android:id="@+id/soba1"
                android:title="@string/soba1_text" />
            <item
                android:id="@+id/soba2"
                android:title="@string/soba2_text" />
        </menu>
    </item>
    <item
        android:id="@+id/stew"
        android:title="@string/stew_text" >
        <menu >
            <item
                android:id="@+id/osyarenabe"
                android:title="@string/osyarenabe_text" />
            <item
                android:id="@+id/oden"
                android:title="@string/oden_text" />
        </menu>
    </item>
    <item
        android:id="@+id/etc"
        android:title="@string/etc_text" >
        <menu >
            <item
                android:id="@+id/beefbowl"
                android:title="@string/beefbowl_text" />
            <item
                android:id="@+id/hayashi"
                android:title="@string/hayashi_text" />
            <item
                android:id="@+id/peperoncino"
                android:title="@string/peperpncino_text" />
        </menu>
    </item>
</menu>